tests/error/tracing_errors/not_value2.err
Error: Error in comptime function return (at $FILE:10:0)
   | 
 8 | 
 9 | @guppy.comptime
10 | def test() -> E:
   | ^^^^^^^^^^^^^^^^
11 |     return E
   | ^^^^^^^^^^^^

Type `E` is not a value

Guppy compilation failed due to 1 previous error
